--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,9 +30,14 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^9.0.7",
+    "redux": "^4.1.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "store2": "^2.14.2",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
@@ -61,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "@types/react": "^18.0.15"
   }
 }
